@@ -7,7 +7,8 @@ Version Next
     - Allow SpringXSLUpdateTransformConfigurer to configure the TransformerFactory
     - Added IdGenerator.checkId() allowing to read but not assign an object's ID
     - Disallow forward references in ParseUtil.serializeReference (as documented)
-    - Added VaadinApplicationListener.removeAsListenerFrom()
+    - Added VaadinExternalListener, changed VaadinApplicationListener to use it
+      NOTE: backward-incompatible change.
     - Added @ThreadConfigurable Spring annotation
 
 Version 1.0.432 Released June 29, 2012
